force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/List_Monitoring_Requirements__c.field-meta.xml
<CustomField>
    <fullName>List_Monitoring_Requirements__c</fullName>
    <description>List Monitoring Requirements: new services or disabled services.</description>
    <inlineHelpText>List NEW services which require monitoring ON &amp;/OR Existing services being DISABLED</inlineHelpText>
    <label>List Monitoring Requirements</label>
    <type>TextArea</type>
</CustomField>