force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Minor_Exception__c.field-meta.xml
<CustomField>
    <fullName>Minor_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if you are filing an exception request. PLEASE FILL OUT EXCEPTION RECORD AT THE BOTTOM OF THIS PAGE.</inlineHelpText>
    <label>Exception</label>
    <type>Checkbox</type>
</CustomField>