force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/No_Blocking_Bugs_on_the_Freeze_Branch__c.field-meta.xml
<CustomField>
    <fullName>No_Blocking_Bugs_on_the_Freeze_Branch__c</fullName>
    <description>There are no Blocking Bugs on the Freeze Branch.</description>
    <inlineHelpText>There are no Blocking Bugs on the Freeze Branch.</inlineHelpText>
    <label>No Blocking Bugs on the Freeze Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>