force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/No_Open_User_Stories__c.field-meta.xml
<CustomField>
    <fullName>No_Open_User_Stories__c</fullName>
    <inlineHelpText>IT RM standard FF criteria.</inlineHelpText>
    <label>No Open User Stories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>