force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Num_P1_Bugs_Test_Failures_to_Fix_Verify__c.field-meta.xml
<CustomField>
    <fullName>Num_P1_Bugs_Test_Failures_to_Fix_Verify__c</fullName>
    <inlineHelpText>Number of P1 bugs or test failures to fix or verify.  FF criterion is no more than 1.</inlineHelpText>
    <label>Num P1 Bugs/TF to Fix/Verify (&lt;=1)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>