force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Number_of_Bugs_TF_to_Verify_max_2_QE__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bugs_TF_to_Verify_max_2_QE__c</fullName>
    <description>Total Number of Fixed Bugs/TF to Verify (maximum 2 per Full-Time QE)</description>
    <inlineHelpText>Total Number of Fixed Bugs/TF to Verify (maximum 2 per Full-Time QE)</inlineHelpText>
    <label>Number of Bugs/TF to Verify (max 2/QE)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>