force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Number_of_Open_User_Stories_0__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_User_Stories_0__c</fullName>
    <description>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</description>
    <inlineHelpText>Number of Open User Stories – excluding “Release Sprint Theme” stories (0)</inlineHelpText>
    <label>Number of Open User Stories (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>