force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Number_of_P2_Bugs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_P2_Bugs__c</fullName>
    <description>Number of P2 Bugs and Test Failures to Fix or Verify.</description>
    <inlineHelpText>Number of P2 bugs and test failures to fix or verify.  FF criterion is no more than 10.</inlineHelpText>
    <label>Num P2 Bugs/TF to Fix/Verify (&lt;=10)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>