force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Number_of_TF_to_Fix_max_1_Dev__c.field-meta.xml
<CustomField>
    <fullName>Number_of_TF_to_Fix_max_1_Dev__c</fullName>
    <label>Number of TF to Fix (max 1/Dev)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>