force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/of_Fixed_Bugs_to_Verify_Zero__c.field-meta.xml
<CustomField>
    <fullName>of_Fixed_Bugs_to_Verify_Zero__c</fullName>
    <label>Number of Fixed Bugs to Verify (0)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>