force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/of_Open_P0_P1_P2_Bugs_ZERO__c.field-meta.xml
<CustomField>
    <fullName>of_Open_P0_P1_P2_Bugs_ZERO__c</fullName>
    <label>Number of Open P0, P1 , P2 Bugs (0)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>