force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Other_Changes_for_RelEng__c.field-meta.xml
<CustomField>
    <fullName>Other_Changes_for_RelEng__c</fullName>
    <description>Anything of interest that Release Engineering should be aware of?</description>
    <inlineHelpText>Anything of interest that Release Engineering should be aware of?</inlineHelpText>
    <label>Other Changes for RelEng</label>
    <type>TextArea</type>
</CustomField>