force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Other_Changes_for_Tech_Ops__c.field-meta.xml
<CustomField>
    <fullName>Other_Changes_for_Tech_Ops__c</fullName>
    <description>Anything of interest that Tech Ops should be aware of?</description>
    <inlineHelpText>Anything of interest that Tech Ops should be aware of?</inlineHelpText>
    <label>Other Changes for Tech Ops</label>
    <type>TextArea</type>
</CustomField>