force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/P0_1_2_Bugs_from_RCA_1_Month_Closed__c.field-meta.xml
<CustomField>
    <fullName>P0_1_2_Bugs_from_RCA_1_Month_Closed__c</fullName>
    <inlineHelpText>All P,0,1,2 Bugs from RCAs older than 1 month are closed, *including* previous or current releases</inlineHelpText>
    <label>P012 Bugs from RCA&#39;s &gt; 1 Month: Closed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>