force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/P0_P1_P2_Bugs_Found_the_Week_of_FF__c.field-meta.xml
<CustomField>
    <fullName>P0_P1_P2_Bugs_Found_the_Week_of_FF__c</fullName>
    <description>P0/P1/P2 Bugs Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</description>
    <inlineHelpText>P0/P1/P2 Bugs Found the Week of Feature Freeze (explain if count is not trending downward compared to previous 2-3 weeks)</inlineHelpText>
    <label>P0/P1/P2 Bugs Found the Week of FF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>