force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Pending_Auto_Integrations_0__c.field-meta.xml
<CustomField>
    <fullName>Pending_Auto_Integrations_0__c</fullName>
    <description>Total Number of Pending Auto-Integrations (0)</description>
    <inlineHelpText>Total Number of Pending Auto-Integrations from 164 -&gt; /main.  Feature Freeze Requirement is 0.</inlineHelpText>
    <label>Total # of Pending Auto-Integrations (0)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>