force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Perf_Impact_Features_Tested_Behind_Perm__c.field-meta.xml
<CustomField>
    <fullName>Perf_Impact_Features_Tested_Behind_Perm__c</fullName>
    <description>High Risk Performance Impacting features tested / behind perm</description>
    <inlineHelpText>Performance risk assessment completed for all features.   All high risk performance impacting features have been adequately tested and/or disabled by default (e.g. behind perm, or config)</inlineHelpText>
    <label>High Risk Performance:Tested/Behind Perm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>