force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Performance_Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Performance_Self_Assessment__c</fullName>
    <description>Are remaining features which have not yet completed performance testing, ready to be handed over to Performance Engineering Team?”</description>
    <inlineHelpText>What does it mean to be ready?

Test plans are finalized &amp; reviewed.

Features with known performance risk are disabled by default (behind perm, config switch)</inlineHelpText>
    <label>Performance Self Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>