force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Post_Feature_Freeze_Updates__c.field-meta.xml
<CustomField>
    <fullName>Post_Feature_Freeze_Updates__c</fullName>
    <inlineHelpText>Use this for updates on status after Feature Freeze.</inlineHelpText>
    <label>Post Feature Freeze Updates</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>