force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Provide_behind_perm_details__c.field-meta.xml
<CustomField>
    <fullName>Provide_behind_perm_details__c</fullName>
    <inlineHelpText>Provide details explaining how a perm is used to disable incomplete features.</inlineHelpText>
    <label>Provide details on your features perm</label>
    <type>TextArea</type>
</CustomField>