force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Provide_Details_for_Core_Hybrid_in_Dev__c.field-meta.xml
<CustomField>
    <fullName>Provide_Details_for_Core_Hybrid_in_Dev__c</fullName>
    <description>Used for details around if a team has not completed their testing of the Core Release against the Hybrid Applications that are in development and slated for the S1 Major Release.  Only needed if &quot;No&quot; is selected.</description>
    <inlineHelpText>Provide details if &quot;No&quot; is selected for the &quot;Core Release against Hybrid Apps in Dev&quot; field.</inlineHelpText>
    <label>Provide Details for Core/In-dev Hybrid</label>
    <type>TextArea</type>
</CustomField>