force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Provide_details_for_Core_Prod_Hybrid__c.field-meta.xml
<CustomField>
    <fullName>Provide_details_for_Core_Prod_Hybrid__c</fullName>
    <description>Used for details around if a team has not completed their testing of the Core Release against the Production Hybrid Applications.  Only needed if &quot;No&quot; is selected.</description>
    <inlineHelpText>Provide details if &quot;No&quot; is selected for the &quot;Core Release against Prod Hybrid Apps&quot; field.</inlineHelpText>
    <label>Provide Details for Core/Prod Hybrid</label>
    <type>TextArea</type>
</CustomField>