force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Provide_details_if_SO_not_created__c.field-meta.xml
<CustomField>
    <fullName>Provide_details_if_SO_not_created__c</fullName>
    <inlineHelpText>FF Criteria: Feature Enablement must be detailed in Solutions Overview (SO)</inlineHelpText>
    <label>Provide details if SO not created</label>
    <type>TextArea</type>
</CustomField>