force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Provide_details_on_open_RCA_bugs__c.field-meta.xml
<CustomField>
    <fullName>Provide_details_on_open_RCA_bugs__c</fullName>
    <inlineHelpText>FF Criteria: All P012 bugs from RCAs older than 1 month CLOSED, including previous or current release</inlineHelpText>
    <label>Provide details on open RCA bugs</label>
    <type>TextArea</type>
</CustomField>