force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Provide_details_on_open_RCA_Stories__c.field-meta.xml
<CustomField>
    <fullName>Provide_details_on_open_RCA_Stories__c</fullName>
    <inlineHelpText>FF Criteria: All User Stories from RCAs older than 1 month CLOSED or SCHEDULED</inlineHelpText>
    <label>Provide details on open RCA Stories</label>
    <type>TextArea</type>
</CustomField>