force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Provide_details_on_open_Regressions__c.field-meta.xml
<CustomField>
    <fullName>Provide_details_on_open_Regressions__c</fullName>
    <inlineHelpText>FF Criteria: All Regressions CLOSED</inlineHelpText>
    <label>Provide details on open Regressions</label>
    <type>TextArea</type>
</CustomField>