force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Provide_other_team_dependencies_details__c.field-meta.xml
<CustomField>
    <fullName>Provide_other_team_dependencies_details__c</fullName>
    <inlineHelpText>Provide details on the status of dependencies on other teams.</inlineHelpText>
    <label>Provide details on open dependencies</label>
    <type>TextArea</type>
</CustomField>