force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/QE_Leadership_Confirmation_Details__c.field-meta.xml
<CustomField>
    <fullName>QE_Leadership_Confirmation_Details__c</fullName>
    <label>QE Leadership Confirmation Details</label>
    <type>TextArea</type>
</CustomField>