force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/QE_Signoff_By__c.field-meta.xml
<CustomField>
    <fullName>QE_Signoff_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QE Signoff By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Freeze_Team_Status</relationshipName>
    <type>Lookup</type>
</CustomField>