force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/RCA_Stories_1_Month_Closed_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>RCA_Stories_1_Month_Closed_Scheduled__c</fullName>
    <inlineHelpText>All User-stories from RCAs older than 1 month, must be closed or scheduled for a release or sprint</inlineHelpText>
    <label>RCA Stories &gt;1 Month Closed or Scheduled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>