force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/RCA_To_Do_s_1_Month_Closed__c.field-meta.xml
<CustomField>
    <fullName>RCA_To_Do_s_1_Month_Closed__c</fullName>
    <inlineHelpText>All ToDos (*ALL Priorities**) from RCAs older than 1 month, *including* previous or current releases are closed.</inlineHelpText>
    <label>To Do&#39;s from RCA&#39;s &gt; 1 Month: Closed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>