force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Scale_Impact_Documented__c.field-meta.xml
<CustomField>
    <fullName>Scale_Impact_Documented__c</fullName>
    <inlineHelpText>Has the Team reviewed and documented scale limitations for all new/updated features?</inlineHelpText>
    <label>Scale Impact Documented?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>