force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Signoff_Date__c</fullName>
    <formula>IF(
 OR( ISPICKVAL(Team_Signoff_Status__c, &quot;Yes / meets criteria&quot;), ISPICKVAL(Team_Signoff_Status__c, &quot;Yes / does not meet criteria&quot;)), 
 LastModifiedDate , null
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signoff Date</label>
    <type>Date</type>
</CustomField>