force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Solution_Overview_Complete__c.field-meta.xml
<CustomField>
    <fullName>Solution_Overview_Complete__c</fullName>
    <description>Enablement slide in the Solution Overview is complete and delivered to Product Ops and Feature Enablement field is updated in Solution Overview in Scrumforce.</description>
    <inlineHelpText>Enablement slide in the Solution Overview is complete and delivered to Product Ops and Feature Enablement field is updated in Solution Overview in Scrumforce.</inlineHelpText>
    <label>Solution Overview Complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>