force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Solutions_Overview_Complete__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Overview_Complete__c</fullName>
    <inlineHelpText>Feature Enablement details are documented in the Solution Overview object</inlineHelpText>
    <label>Solution Overview Created</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>