force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Stop_Monitoring_Disabled_Services__c.field-meta.xml
<CustomField>
    <fullName>Stop_Monitoring_Disabled_Services__c</fullName>
    <description>Any existing services being disabled and need monitoring turned off?</description>
    <inlineHelpText>Any existing services being disabled and need monitoring turned off?</inlineHelpText>
    <label>Stop Monitoring Disabled Services</label>
    <type>TextArea</type>
</CustomField>