force-app/main/default/objects/ADM_Feature_Freeze_Status__c/fields/Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Team_Comments__c</fullName>
    <label>Team Comments</label>
    <type>TextArea</type>
</CustomField>